<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/about_title"
        android:textAllCaps="true"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/tv_login"
        android:textStyle="bold" />

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webView"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:scrollbars="none"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_idonate_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/about_cloud_based"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/about_idonate_impact"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/about_idonate_give"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about_promote"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about_connect"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about_endure"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/about_personalize"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:background="@drawable/ic_about_box"
        android:layout_above="@+id/annual_back_button"
        android:layout_marginRight="@dimen/_20sdp"
        android:padding="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDummy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_dummy_text"
            android:scrollbars="vertical"
            android:textSize="@dimen/_12sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/title_color" />

    </LinearLayout>
    <Button
        android:id="@+id/annual_back_button"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_18sdp"
        android:layout_weight="1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/reset_button_border"
        android:padding="@dimen/_5sdp"
        android:text="@string/back"
        android:textSize="@dimen/_14sdp"
        android:textColor="@android:color/black" />
</RelativeLayout>