<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/setting_text"
        android:textAllCaps="true"
        android:textColor="@color/tv_login"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/setting_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/title_color"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notification_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:checked="true"
            android:switchMinWidth="@dimen/_40sdp"
            android:text="@string/setting_alloe"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_14sdp"
            android:thumb="@drawable/custom_thumb"
            app:track="@drawable/custom_track" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/sound_on_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:checked="false"
            android:switchMinWidth="@dimen/_40sdp"
            android:text="@string/setting_not_distrub"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_14sdp"
            android:thumb="@drawable/custom_thumb"
            android:visibility="visible"
            app:track="@drawable/custom_track" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/setting_make_sound"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/setting_account_setting"
            android:textColor="@color/title_color"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/relative_layout_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_change_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/text_color_navi" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_right_arrow" />

        </RelativeLayout>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/login_botton_border"
            android:padding="@dimen/_5sdp"
            android:text="@string/type_apply_button"
            android:textColor="@android:color/white" />


    </LinearLayout>
</RelativeLayout>